<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlickRabbit</string>

    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_id">Set Flickr ID</string>
    <string name="action_flickr">Open in Flickr</string>
    <string name="action_ok">OK</string>

    <string name="grid_null_state">Couldn\'t fetch images!\nCheck your network connection and that your Flickr username is entered correctly.</string>

    <string name="help_title">Help</string>
    <string name="help_text">Tap a photo to load images faved by the person who took that photo.\nLong press a photo to see it on Flickr.\n\nVersion 0.3.1</string>

    <string name="pref_userid">Flickr User ID</string>
    <string name="pref_userid_summ">Put your Flickr ID number or username here.</string>

    <string name="pref_long_click">Grid Long Click Behavior</string>
    <string name="pref_long_click_summ">Choose what you want to have happen when long clicking a grid item.</string>
    <string name="pref_long_click_flickr">FLICKR</string>
    <string name="pref_long_click_photo_view">PHOTO_VIEW</string>

    <string name="pref_grid_type">Grid Type</string>
    <string name="pref_grid_type_summ">Choose what type of grid you\'d like to see.</string>
    <string name="pref_grid_type_auto">AUTO</string>
    <string name="pref_grid_type_staggered">STAGGERED</string>
    <string name="pref_grid_type_regular">REGULAR</string>

    <string name="pref_grid_num">New Grid Items Per Tap</string>
    <string name="pref_grid_num_summ">Choose how many new grid items you\'d like to see at once when you tap a grid item.</string>

    <string name="pref_fetch_num">Possible New Grid Items To Fetch</string>
    <string name="pref_fetch_num_summ">Choose how many favorites you\'d like from which to choose the new grid items. Maximum is 500.</string>

    <string name="pref_grid_image_size">Grid Image Size</string>
    <string name="pref_grid_image_size_summ">Choose how large you\'d like your grid images to be.</string>

</resources>
