<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="pref_userid"
        android:title="@string/pref_userid"
        android:summary="@string/pref_userid_summ"
        android:defaultValue="40786724@N00" />
    <ListPreference
        android:key="pref_grid_type"
        android:title="@string/pref_grid_type"
        android:summary="@string/pref_grid_type_summ"
        android:entries="@array/pref_grid_type_entries"
        android:entryValues="@array/pref_grid_type_values"
        android:defaultValue="@string/pref_grid_type_auto" />
    <ListPreference
        android:key="pref_long_click"
        android:title="@string/pref_long_click"
        android:summary="@string/pref_long_click_summ"
        android:entries="@array/pref_long_click_entries"
        android:entryValues="@array/pref_long_click_values"
        android:defaultValue="@string/pref_long_click_photo_view" />
</PreferenceScreen>